2011-08-06  MIYAMUKO Katsuyuki

	* grep-a-lot 1.1.0 released!

2011-07-28  MIYAMUKO Katsuyuki

	* outline-tree2 との親和性を高めた (#2)
	- (*grep-a-lot-rename-buffer-hook*): バッファ名の変更後に
	  よばれるフックを追加。
	- outline-tree2 のノード名を更新するフックをデフォルトで追加
	- outline-tree2 でグループ化されるようにバッファ名を変更
	  - 変更前: *grep*<キーワード>
	  - 変更後: *grep:<キーワード>*
	https://github.com/miyamuko/grep-a-lot/issues/2

2011-07-19  MIYAMUKO Katsuyuki

	* grep-a-lot 1.0.1 リリース!

	* lisp/grepd.l をロードしていない状態で、grep-dialog を実行すると
	lisp/grepd.l の autoload に失敗する問題を修正

	* grep-dialog の非同期 grep で検索文字列の取得に失敗して
	動いていなかった問題を修正 (Reported by @hokorobi)
	https://github.com/miyamuko/grep-a-lot/issues/1

2011-07-15  MIYAMUKO Katsuyuki

	* fggrep で検索文字列が取得できていなかったのを修正

	* grep-a-lot 1.0.0 リリース!

	* ggrep に対応

	* sandbox のコードを整理して取り込んだ
	https://github.com/miyamuko/sandbox/blob/master/xyzzy/grep-a-lot.l

	* grep-a-lot 作成開始